# orb_slam3_ros_wrapper

./: .gitignore  CMakeLists.txt  README.md  package.xml
config/: EuRoC_mono_inertial_rectified.yaml  EuRoC_stereo_inertial_non_rectified.yaml  Realsense_T265.yaml  TUM1.yaml  orb_slam3.rviz  orb_slam3_no_imu.rviz  orb_slam3_with_imu.rviz
include/: common.h
launch/: euroc_mono.launch  euroc_monoimu.launch  euroc_stereo.launch  euroc_stereoimu.launch  live_t265.launch  orb_slam3_euroc_mono.launch  orb_slam3_euroc_monoimu.launch  orb_slam3_euroc_stereo.launch  orb_slam3_euroc_stereoimu.launch  orb_slam3_live_t265.launch  orb_slam3_mono_euroc.launch  orb_slam3_mono_inertial_euroc.launch  orb_slam3_rgbd_tum.launch  orb_slam3_stereo_euroc.launch  orb_slam3_stereo_inertial_euroc.launch  orb_slam3_tum_rgbd.launch  tello.launch  tum_rgbd.launch
src/: common.cc  mono_inertial_node.cc  mono_node.cc  rgbd_node.cc  stereo_inertial_node.cc  stereo_node.cc
